CB responsive tabs cleanup: consolidate functions, fix scrollto on mobile

--- a/sass/theme/components/_side-tabbed-content.scss
+++ b/sass/theme/components/_side-tabbed-content.scss
@@ -89,7 +89,7 @@
 		}
 	}
 
-	.responsive-tab-trigger {
+	.main-tab-content-wrapper .tab-switch {
 		display: none;
 		position: relative;
 		padding: 35px 0;
